# GuitarFX

./: .replit  batch_process_cli.py  collect_training_samples.py  main.py  pyproject.toml  replit.md  train_technique_model.py
audio/: audio_manager.py  audio_processor.py  batch_processor.py
config/: audio_config.py  settings.py
detection/: feature_extractor.py  technique_detector.py
effects/: base_effect.py  basic_distortion_effect.py  broken_record_effect.py  distortion_effect.py  effect_processor.py
gui/: control_panel.py  main_window.py  visualizer.py
models/: .gitkeep  technique_model.pkl  technique_scaler.pkl  training_info.json
utils/: buffer_manager.py  logger.py
